k8s/logging/fluentbit.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: fluent-bit
  namespace: kube-system
spec:
  selector: 
    matchLabels:
      k8s-app: fluent-bit
  template: 
    metadata:
      labels: 
        k8s-app: fluent-bit
    spec:
      serviceAccountName: fluentbit-sa
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:latest
          volumeMounts:
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: config
              mountPath: /fluent-bit/etc/
      volumes:
        - name: varlog
          hostPath: 
            path: /var/log
        - name: config
          configMap: 
            name: fluent-bit-config
