k8s/logging/test_app_nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  namespace: log-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-nginx
  template:
    metadata:
      labels:
        app: deployment-nginx
    spec:
      containers:
      - name: deployment-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: log-test
spec:
  selector: 
    app: deployment-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: log-test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 80
