k8s/logging/test_app_nginx_sidecar.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  namespace: log-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-nginx
  template:
    metadata:
      labels:
        app: deployment-nginx
    spec:
      serviceAccountName: fluentbit-sa
      containers:
      - name: deployment-nginx
        image: 838235863925.dkr.ecr.ap-northeast-2.amazonaws.com/ubuntu-nginx:latest
        ports:
        - containerPort: 80
        volumeMounts: 
          - name: log-volume
            mountPath: /var/log/nginx
      - name: fluent-bit-sidecar
        image: fluent/fluent-bit:latest
        volumeMounts: 
          - name: log-volume
            mountPath: /var/log/nginx
          - name: config-volume
            mountPath: /fluent-bit/etc/
      volumes:
        - name: log-volume
          emptyDir: {}
        - name: config-volume
          configMap: 
            name: fluent-bit-config
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: log-test
spec:
  selector: 
    app: deployment-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: log-test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 80
